--- a/notebooks/Heart_Disease_Prediction_AnaG.ipynb
+++ b/notebooks/Heart_Disease_Prediction_AnaG.ipynb
@@ -8,7 +8,95 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import-libraries\" data-toc-modified-id=\"Import-libraries-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import libraries</a></span></li><li><span><a href=\"#Load-data\" data-toc-modified-id=\"Load-data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Load data</a></span></li><li><span><a href=\"#Insert-data-into-SQL\" data-toc-modified-id=\"Insert-data-into-SQL-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Insert data into SQL</a></span><ul class=\"toc-item\"><li><span><a href=\"#Connect-with-the-DDBB\" data-toc-modified-id=\"Connect-with-the-DDBB-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Connect with the DDBB</a></span></li><li><span><a href=\"#Load-data\" data-toc-modified-id=\"Load-data-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Load data</a></span></li><li><span><a href=\"#See-the-table\" data-toc-modified-id=\"See-the-table-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>See the table</a></span></li></ul></li><li><span><a href=\"#Exploratory-Data-Analysis-EDA\" data-toc-modified-id=\"Exploratory-Data-Analysis-EDA-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Exploratory Data Analysis EDA</a></span><ul class=\"toc-item\"><li><span><a href=\"#Plots-to-understand-the-data,-plot-different-features-against-one-another-(scatter),-against-frequency-(histogram)\" data-toc-modified-id=\"Plots-to-understand-the-data,-plot-different-features-against-one-another-(scatter),-against-frequency-(histogram)-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Plots to understand the data, plot different features against one another (scatter), against frequency (histogram)</a></span><ul class=\"toc-item\"><li><span><a href=\"#HeartDisease-vs-Age\" data-toc-modified-id=\"HeartDisease-vs-Age-4.1.1\"><span class=\"toc-item-num\">4.1.1&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Age</a></span></li><li><span><a href=\"#HeartDisease-vs-Sex\" data-toc-modified-id=\"HeartDisease-vs-Sex-4.1.2\"><span class=\"toc-item-num\">4.1.2&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Sex</a></span></li><li><span><a href=\"#HeartDisease-vs-Sex-and-Age\" data-toc-modified-id=\"HeartDisease-vs-Sex-and-Age-4.1.3\"><span class=\"toc-item-num\">4.1.3&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Sex and Age</a></span></li><li><span><a href=\"#HeartDisease-vs-ChestPainType\" data-toc-modified-id=\"HeartDisease-vs-ChestPainType-4.1.4\"><span class=\"toc-item-num\">4.1.4&nbsp;&nbsp;</span>HeartDisease <em>vs</em> ChestPainType</a></span></li><li><span><a href=\"#HeartDisease-vs-RestingBP\" data-toc-modified-id=\"HeartDisease-vs-RestingBP-4.1.5\"><span class=\"toc-item-num\">4.1.5&nbsp;&nbsp;</span>HeartDisease <em>vs</em> RestingBP</a></span></li><li><span><a href=\"#HeartDisease-vs-Cholesterol\" data-toc-modified-id=\"HeartDisease-vs-Cholesterol-4.1.6\"><span class=\"toc-item-num\">4.1.6&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Cholesterol</a></span></li></ul></li><li><span><a href=\"#Detecting-Outliers--🚨\" data-toc-modified-id=\"Detecting-Outliers--🚨-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Detecting Outliers  🚨</a></span></li><li><span><a href=\"#Categorical-encoding\" data-toc-modified-id=\"Categorical-encoding-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Categorical encoding</a></span></li><li><span><a href=\"#Heatmap\" data-toc-modified-id=\"Heatmap-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Heatmap</a></span></li></ul></li><li><span><a href=\"#Model-the-data\" data-toc-modified-id=\"Model-the-data-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Model the data</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Dataset-description\" data-toc-modified-id=\"Dataset-description-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Dataset description</a></span></li><li><span><a href=\"#Import-libraries\" data-toc-modified-id=\"Import-libraries-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Import libraries</a></span></li><li><span><a href=\"#Load-data\" data-toc-modified-id=\"Load-data-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Load data</a></span></li><li><span><a href=\"#Insert-data-into-SQL\" data-toc-modified-id=\"Insert-data-into-SQL-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Insert data into SQL</a></span><ul class=\"toc-item\"><li><span><a href=\"#Connect-with-the-DDBB\" data-toc-modified-id=\"Connect-with-the-DDBB-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Connect with the DDBB</a></span></li><li><span><a href=\"#Load-data\" data-toc-modified-id=\"Load-data-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Load data</a></span></li><li><span><a href=\"#See-the-table\" data-toc-modified-id=\"See-the-table-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>See the table</a></span></li></ul></li><li><span><a href=\"#Exploratory-Data-Analysis-EDA\" data-toc-modified-id=\"Exploratory-Data-Analysis-EDA-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Exploratory Data Analysis EDA</a></span><ul class=\"toc-item\"><li><span><a href=\"#Plots-to-understand-the-data,-plot-different-features-against-one-another-(scatter),-against-frequency-(histogram)\" data-toc-modified-id=\"Plots-to-understand-the-data,-plot-different-features-against-one-another-(scatter),-against-frequency-(histogram)-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Plots to understand the data, plot different features against one another (scatter), against frequency (histogram)</a></span><ul class=\"toc-item\"><li><span><a href=\"#HeartDisease-vs-Age\" data-toc-modified-id=\"HeartDisease-vs-Age-5.1.1\"><span class=\"toc-item-num\">5.1.1&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Age</a></span></li><li><span><a href=\"#HeartDisease-vs-Sex\" data-toc-modified-id=\"HeartDisease-vs-Sex-5.1.2\"><span class=\"toc-item-num\">5.1.2&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Sex</a></span></li><li><span><a href=\"#HeartDisease-vs-Sex-and-Age\" data-toc-modified-id=\"HeartDisease-vs-Sex-and-Age-5.1.3\"><span class=\"toc-item-num\">5.1.3&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Sex and Age</a></span></li><li><span><a href=\"#HeartDisease-vs-ChestPainType\" data-toc-modified-id=\"HeartDisease-vs-ChestPainType-5.1.4\"><span class=\"toc-item-num\">5.1.4&nbsp;&nbsp;</span>HeartDisease <em>vs</em> ChestPainType</a></span></li><li><span><a href=\"#HeartDisease-vs-RestingBP\" data-toc-modified-id=\"HeartDisease-vs-RestingBP-5.1.5\"><span class=\"toc-item-num\">5.1.5&nbsp;&nbsp;</span>HeartDisease <em>vs</em> RestingBP</a></span></li><li><span><a href=\"#HeartDisease-vs-Cholesterol\" data-toc-modified-id=\"HeartDisease-vs-Cholesterol-5.1.6\"><span class=\"toc-item-num\">5.1.6&nbsp;&nbsp;</span>HeartDisease <em>vs</em> Cholesterol</a></span></li></ul></li><li><span><a href=\"#Detecting-Outliers--🚨\" data-toc-modified-id=\"Detecting-Outliers--🚨-5.2\"><span class=\"toc-item-num\">5.2&nbsp;&nbsp;</span>Detecting Outliers  🚨</a></span></li><li><span><a href=\"#Categorical-encoding\" data-toc-modified-id=\"Categorical-encoding-5.3\"><span class=\"toc-item-num\">5.3&nbsp;&nbsp;</span>Categorical encoding</a></span></li><li><span><a href=\"#Heatmap\" data-toc-modified-id=\"Heatmap-5.4\"><span class=\"toc-item-num\">5.4&nbsp;&nbsp;</span>Heatmap</a></span></li></ul></li><li><span><a href=\"#Model-the-data\" data-toc-modified-id=\"Model-the-data-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Model the data</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13ba97bb",
+   "metadata": {},
+   "source": [
+    "# Dataset description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2524d4f1",
+   "metadata": {},
+   "source": [
+    "🧐 **Problem Definition** 🧐\n",
+    "\n",
+    "\n",
+    "Given clinical parameters about a patient, can we predict whether or not they have heart disease?\n",
+    "\n",
+    "📉Features 📉\n",
+    "\n",
+    "- age -> age in years\n",
+    "\n",
+    "\n",
+    "- sex -> (1 = male; 0 = female)\n",
+    "\n",
+    "\n",
+    "- cp -> chest pain type\n",
+    "\n",
+    "\n",
+    "    - 0: Typical angina: chest pain related decrease blood supply to the heart\n",
+    "    \n",
+    "    - 1: Atypical angina: chest pain not related to heart\n",
+    "    \n",
+    "    - 2: Non-anginal pain: typically esophageal spasms (non heart related)\n",
+    "    \n",
+    "    - 3: Asymptomatic: chest pain not showing signs of disease\n",
+    "    \n",
+    "    \n",
+    "- trestbps -> resting blood pressure (in mm Hg on admission to the hospital) anything above 130-140 is typically cause for concern\n",
+    "\n",
+    "\n",
+    "- chol -> serum cholestoral in mg/dl\n",
+    "\n",
+    "    - serum = LDL + HDL + .2 * triglycerides\n",
+    "    - above 200 is cause for concern\n",
+    "- fbs -> (fasting blood sugar > 120 mg/dl) (1 = true; 0 = false)\n",
+    "    - '>126' mg/dL signals diabetes\n",
+    "\n",
+    "\n",
+    "- restecg -> resting electrocardiographic results\n",
+    "    - 0: Nothing to note\n",
+    "    - 1: ST-T Wave abnormality\n",
+    "        - can range from mild symptoms to severe problems\n",
+    "        - signals non-normal heart beat\n",
+    "    - 2: Possible or definite left ventricular hypertrophy\n",
+    "        - Enlarged heart's main pumping chamber\n",
+    "        \n",
+    "        \n",
+    "- thalach -> maximum heart rate achieved\n",
+    "\n",
+    "\n",
+    "- exang -> exercise induced angina (1 = yes; 0 = no)\n",
+    "\n",
+    "\n",
+    "- oldpeak -> ST depression induced by exercise relative to rest looks at stress of heart during excercise unhealthy heart will stress more\n",
+    "\n",
+    "\n",
+    "- slope -> the slope of the peak exercise ST segment\n",
+    "    - 0: Upsloping: better heart rate with excercise (uncommon)\n",
+    "    - 1: Flatsloping: minimal change (typical healthy heart)\n",
+    "    - 2: Downslopins: signs of unhealthy heart\n",
+    "    \n",
+    "    \n",
+    "- ca -> number of major vessels (0-3) colored by flourosopy\n",
+    "    - colored vessel means the doctor can see the blood passing through\n",
+    "    - the more blood movement the better (no clots)\n",
+    "\n",
+    "\n",
+    "- thal -> thalium stress result\n",
+    "\n",
+    "    - 1,3: normal\n",
+    "    - 6: fixed defect: used to be defect but ok now\n",
+    "    - 7: reversable defect: no proper blood movement when excercising\n",
+    "    \n",
+    "    \n",
+    "- target - have disease or not (1=yes, 0=no) (= the predicted attribute)\n"
    ]
   },
   {
